--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,15 +307,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 42/42 [01:01<00:00,  1.46s/it] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -327,7 +319,7 @@
     "import matplotlib.pyplot as plt\n",
     "from json import dumps\n",
     "\n",
-    "N_TRIALS = 2\n",
+    "N_TRIALS = 10\n",
     "\n",
     "\n",
     "def process_pair(pair_trial):\n",
@@ -354,7 +346,7 @@
     "    return df_results\n",
     "\n",
     "\n",
-    "results_filename = \"results/pairwise_classification.csv\"\n",
+    "results_filename = \"classification_results/pairwise_classification.csv\"\n",
     "if os.path.exists(results_filename):\n",
     "    df_results = pd.read_csv(results_filename)\n",
     "else:\n",
@@ -421,7 +413,12 @@
     "for _, (author1, author2, trial, accuracy, df_test, df_coefs) in df_results.iterrows():\n",
     "    df_test = pd.read_json(StringIO(loads(df_test)))\n",
     "\n",
-    "    cm = confusion_matrix(df_test[\"author\"], df_test[\"author_pred\"], normalize=\"true\")\n",
+    "    cm = confusion_matrix(\n",
+    "        df_test[\"author\"],\n",
+    "        df_test[\"author_pred\"],\n",
+    "        normalize=\"true\",\n",
+    "        labels=[author1, author2],\n",
+    "    )\n",
     "\n",
     "    zero_zero = cm[0, 0]\n",
     "    zero_one = cm[0, 1]\n",
@@ -442,13 +439,16 @@
     "df_cms.groupby([\"author1\", \"author2\"]).mean().reset_index()\n",
     "\n",
     "for _, (author1, author2, z_z, z_o, o_z, o_o) in df_cms.iterrows():\n",
+    "    classification_figname = (\n",
+    "        f\"figures/pairwise/classification/confusion_matrices/{author1}_{author2}.png\"\n",
+    "    )\n",
+    "    if os.path.exists(classification_figname):\n",
+    "        continue\n",
+    "\n",
     "    authors = [author1, author2]\n",
     "    cm = np.array([[z_z, z_o], [o_z, o_o]])\n",
     "    cm = pd.DataFrame(cm, index=authors, columns=authors)\n",
     "\n",
-    "    classification_figname = (\n",
-    "        f\"figures/pairwise/classification/confusion_matrices/{author1}_{author2}.png\"\n",
-    "    )\n",
     "    sns.heatmap(cm, annot=True, vmin=0, vmax=1)\n",
     "    plt.title(\"Average Confusion Matrix for Binary Logistic Regression\")\n",
     "    plt.ylabel(\"True author\")\n",
@@ -499,37 +499,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "word\n",
-       "in             0.254228\n",
-       "here           0.238299\n",
-       "an             0.229257\n",
-       "and            0.225788\n",
-       "a              0.214595\n",
-       "of             0.214263\n",
-       "as             0.209407\n",
-       "to             0.204849\n",
-       "is             0.173815\n",
-       "moreover       0.158036\n",
-       "this           0.156179\n",
-       "that           0.155051\n",
-       "with           0.153098\n",
-       "not            0.150558\n",
-       "furthermore    0.150114\n",
-       "which          0.148979\n",
-       "despite        0.148544\n",
-       "how            0.142244\n",
-       "it             0.140667\n",
-       "when           0.139862\n",
+       "in             0.256229\n",
+       "here           0.246231\n",
+       "and            0.237781\n",
+       "an             0.226464\n",
+       "of             0.214341\n",
+       "a              0.207266\n",
+       "is             0.204516\n",
+       "as             0.202178\n",
+       "to             0.192250\n",
+       "this           0.168080\n",
+       "despite        0.162987\n",
+       "which          0.162064\n",
+       "with           0.158224\n",
+       "that           0.149843\n",
+       "moreover       0.149747\n",
+       "was            0.148755\n",
+       "not            0.144959\n",
+       "may            0.141715\n",
+       "furthermore    0.141356\n",
+       "when           0.140737\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,42 +542,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Average rank coef\n"
+    "### Average coef rank\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "word\n",
-       "and            39.333333\n",
-       "of             42.809524\n",
-       "a              42.857143\n",
-       "as             43.095238\n",
-       "in             49.476190\n",
-       "this           50.285714\n",
-       "with           51.238095\n",
-       "an             53.952381\n",
-       "is             55.809524\n",
-       "despite        56.952381\n",
-       "here           57.000000\n",
-       "to             60.333333\n",
-       "it             60.666667\n",
-       "that           64.523810\n",
-       "through        65.523810\n",
-       "not            65.619048\n",
-       "which          65.619048\n",
-       "moreover       65.952381\n",
-       "furthermore    69.761905\n",
-       "he             71.190476\n",
+       "and         37.000000\n",
+       "is          39.809524\n",
+       "as          44.000000\n",
+       "of          46.428571\n",
+       "an          48.333333\n",
+       "this        49.714286\n",
+       "despite     51.095238\n",
+       "a           51.142857\n",
+       "here        51.571429\n",
+       "with        55.523810\n",
+       "in          56.333333\n",
+       "to          57.047619\n",
+       "which       57.095238\n",
+       "may         59.666667\n",
+       "moreover    60.095238\n",
+       "when        62.523810\n",
+       "was         63.142857\n",
+       "through     63.190476\n",
+       "not         67.285714\n",
+       "it          67.809524\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,17 +595,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2/2 [02:27<00:00, 73.69s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -618,7 +610,7 @@
     "from json import dumps\n",
     "\n",
     "\n",
-    "mc_results_filename = \"results/multiclass_classification.csv\"\n",
+    "mc_results_filename = \"classification_results/multiclass_classification.csv\"\n",
     "\n",
     "if os.path.exists(mc_results_filename):\n",
     "    df_mc_results = pd.read_csv(mc_results_filename)\n",
@@ -637,8 +629,6 @@
     "\n",
     "        mc_results.append(\n",
     "            {\n",
-    "                \"author1\": author1,\n",
-    "                \"author2\": author2,\n",
     "                \"df_test\": df_test_json,\n",
     "                \"df_coefs\": df_coefs_json,\n",
     "            }\n",
@@ -652,33 +642,215 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cms = []\n",
+    "for _, (df_test, _) in df_mc_results.iterrows():\n",
+    "    df_test = pd.read_json(StringIO(loads(df_test)))\n",
+    "    cm = confusion_matrix(\n",
+    "        df_test[\"author\"], df_test[\"author_pred\"], normalize=\"true\", labels=AUTHORS\n",
+    "    )\n",
+    "    cms.append(cm)\n",
+    "\n",
+    "\n",
+    "classification_figname = \"figures/multiclass/classification/confusion_matrix.png\"\n",
+    "if not os.path.exists(classification_figname):\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    sns.heatmap(\n",
+    "        np.mean(cms, axis=0),\n",
+    "        annot=True,\n",
+    "        xticklabels=AUTHORS,\n",
+    "        yticklabels=AUTHORS,\n",
+    "        fmt=\".2f\",\n",
+    "    )\n",
+    "    plt.title(\"Multiclass Classification Confusion Matrix\")\n",
+    "    plt.ylabel(\"True author\")\n",
+    "    plt.xlabel(\"Predicted author\")\n",
+    "    plt.savefig(classification_figname, bbox_inches=\"tight\")\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average word coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from json import loads\n",
+    "from io import StringIO\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "df_coefs_list = []\n",
+    "for _, (_, df_coefs) in df_mc_results.iterrows():\n",
+    "    df_coefs = pd.read_json(StringIO(loads(df_coefs)))\n",
+    "    df_coefs[\"i\"] = i\n",
+    "    df_coefs = df_coefs.pivot(index=\"i\", columns=\"word\", values=\"coef\")\n",
+    "    df_coefs_list.append(df_coefs)\n",
+    "\n",
+    "df_coefs_list = pd.concat(df_coefs_list).replace(np.nan, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Average coef"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "word\n",
+       "here       0.268697\n",
+       "a          0.248612\n",
+       "in         0.244271\n",
+       "and        0.238381\n",
+       "an         0.227587\n",
+       "of         0.224629\n",
+       "is         0.209168\n",
+       "as         0.205005\n",
+       "to         0.201880\n",
+       "this       0.182059\n",
+       "which      0.181930\n",
+       "the        0.174612\n",
+       "that       0.170505\n",
+       "their      0.169423\n",
+       "it         0.164873\n",
+       "may        0.161354\n",
+       "how        0.160643\n",
+       "despite    0.159006\n",
+       "when       0.158213\n",
+       "not        0.154064\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_coefs_list.mean().sort_values(ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Average coef rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "word\n",
+       "here         1.5\n",
+       "a            3.1\n",
+       "in           3.7\n",
+       "and          3.9\n",
+       "an           5.1\n",
+       "of           6.7\n",
+       "to           8.3\n",
+       "is           8.4\n",
+       "as           8.4\n",
+       "which       12.2\n",
+       "this        15.7\n",
+       "that        16.8\n",
+       "their       17.4\n",
+       "the         17.6\n",
+       "may         19.4\n",
+       "when        19.7\n",
+       "despite     20.7\n",
+       "not         21.1\n",
+       "moreover    21.8\n",
+       "it          21.9\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_coefs_list.rank(axis=1, ascending=False).mean(axis=0).sort_values().head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Word frequencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "pronoun_figname = \"figures/word_frequencies/pronouns_heatmap.png\"\n",
-    "if not os.path.exists(pronoun_figname):\n",
-    "    pronouns = [\n",
-    "        \"he\",\n",
-    "        \"him\",\n",
-    "        \"his\",\n",
-    "        \"himself\",\n",
-    "        \"she\",\n",
-    "        \"her\",\n",
-    "        \"herself\",\n",
-    "        \"they\",\n",
-    "        \"them\",\n",
-    "        \"their\",\n",
-    "        \"themselves\",\n",
-    "    ]\n",
+    "pronouns = [\n",
+    "    \"he\",\n",
+    "    \"him\",\n",
+    "    \"his\",\n",
+    "    \"himself\",\n",
+    "    \"she\",\n",
+    "    \"her\",\n",
+    "    \"herself\",\n",
+    "    \"they\",\n",
+    "    \"them\",\n",
+    "    \"their\",\n",
+    "    \"themselves\",\n",
+    "]\n",
+    "\n",
+    "high_coef_figname = \"figures/word_frequencies/high_coef_words_heatmap.png\"\n",
+    "high_coef_words = list(df_coefs_list.mean().sort_values(ascending=False).head(14).index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_list_tuples = [\n",
+    "    (\"Pronouns\", pronouns, pronoun_figname),\n",
+    "    (\"High LR Coefficient Words\", high_coef_words, high_coef_figname),\n",
+    "]\n",
+    "\n",
+    "for title, words, figname in word_list_tuples:\n",
+    "    if os.path.exists(figname):\n",
+    "        continue\n",
     "\n",
     "    all_word_frequencies = []\n",
-    "    for word in pronouns:\n",
+    "    for word in words:\n",
     "        word_frequencies = {}\n",
     "        for author in AUTHORS:\n",
     "            author_df = df[df[\"author\"] == author]\n",
@@ -687,7 +859,7 @@
     "            word_frequencies[author] = word_freq.mean()\n",
     "        all_word_frequencies.append(word_frequencies)\n",
     "\n",
-    "    frequencies_df = pd.DataFrame(all_word_frequencies, index=pronouns)\n",
+    "    frequencies_df = pd.DataFrame(all_word_frequencies, index=words)\n",
     "    frequencies_df = frequencies_df.div(frequencies_df[\"human\"], axis=0)\n",
     "    sns.heatmap(\n",
     "        frequencies_df.drop(columns=\"human\"),\n",
@@ -697,10 +869,10 @@
     "        cbar_kws={\"format\": \"%.2g\", \"ticks\": [0.25, 0.5, 1, 2, 4]},\n",
     "        cmap=sns.color_palette(\"vlag_r\", as_cmap=True),\n",
     "    )\n",
-    "    plt.title(f\"LLM/Human Pronoun Frequency Ratios\")\n",
+    "    plt.title(f\"LLM/Human Frequency Ratios over {title}\")\n",
     "    plt.xlabel(\"Author\")\n",
     "    plt.ylabel(\"Word\")\n",
-    "    plt.savefig(pronoun_figname, bbox_inches=\"tight\")\n",
+    "    plt.savefig(figname, bbox_inches=\"tight\")\n",
     "    plt.close()"
    ]
   }
