--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,8 +167,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pairwise"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,14 +184,22 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "author_groups = PAIRS + [LLMS, AUTHORS]\n",
+    "\n",
     "for reducer, reducer_name in [(PCA, \"PCA\"), (TSNE, \"t-SNE\")]:\n",
-    "    for author1, author2 in PAIRS:\n",
-    "        filename = f\"figures/pairwise/{reducer_name}/{author1}_{author2}.png\"\n",
+    "    for authors in author_groups:\n",
+    "        if len(authors) == 2:\n",
+    "            filename = f\"figures/{reducer_name}/{authors[0]}_{authors[1]}.png\"\n",
+    "        elif len(authors) == 6:\n",
+    "            filename = f\"figures/{reducer_name}/all_llms.png\"\n",
+    "        else:\n",
+    "            filename = f\"figures/{reducer_name}/all_authors.png\"\n",
+    "\n",
     "        if os.path.exists(filename):\n",
     "            continue\n",
     "\n",
     "        df_sampled = (\n",
-    "            df[(df[\"author\"] == author1) | (df[\"author\"] == author2)]\n",
+    "            df[(df[\"author\"].isin(authors))]\n",
     "            .groupby([\"dataset\", \"author\", \"prompt_id\"])\n",
     "            .apply(lambda x: x.sample(10), include_groups=False)\n",
     "            .reset_index(drop=False)\n",
