--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,19 +163,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pairwise"
+    "# PCA and t-SNE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pivot = (\n",
+    "bin_pivot = (\n",
     "    df_results[[\"author1\", \"author2\", \"accuracy\"]]\n",
     "    .groupby([\"author1\", \"author2\"])\n",
     "    .mean()\n",
@@ -399,7 +392,7 @@
     "\n",
     "classification_figname = \"figures/pairwise/classification/heatmap.png\"\n",
     "if not os.path.exists(classification_figname):\n",
-    "    sns.heatmap(pivot, annot=True, vmin=0.5, vmax=1.0)\n",
+    "    sns.heatmap(bin_pivot, annot=True, vmin=0.5, vmax=1.0)\n",
     "    plt.title(\"Binary Logistic Regression Classification Accuracies\")\n",
     "    plt.ylabel(\"Author 1\")\n",
     "    plt.xlabel(\"Author 2\")\n",
@@ -557,60 +550,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Average coef rank\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "word\n",
-       "and         37.000000\n",
-       "is          39.809524\n",
-       "as          44.000000\n",
-       "of          46.428571\n",
-       "an          48.333333\n",
-       "this        49.714286\n",
-       "despite     51.095238\n",
-       "a           51.142857\n",
-       "here        51.571429\n",
-       "with        55.523810\n",
-       "in          56.333333\n",
-       "to          57.047619\n",
-       "which       57.095238\n",
-       "may         59.666667\n",
-       "moreover    60.095238\n",
-       "when        62.523810\n",
-       "was         63.142857\n",
-       "through     63.190476\n",
-       "not         67.285714\n",
-       "it          67.809524\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_coefs_list.rank(axis=1, ascending=False).mean(axis=0).sort_values().head(20)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Multi-class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,13 +618,13 @@
     "        df_test[\"author\"], df_test[\"author_pred\"], normalize=\"true\", labels=AUTHORS\n",
     "    )\n",
     "    cms.append(cm)\n",
-    "\n",
+    "multi_cm = np.mean(cms, axis=0)\n",
     "\n",
     "classification_figname = \"figures/multiclass/classification/confusion_matrix.png\"\n",
     "if not os.path.exists(classification_figname):\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    sns.heatmap(\n",
-    "        np.mean(cms, axis=0),\n",
+    "        multi_cm,\n",
     "        annot=True,\n",
     "        xticklabels=AUTHORS,\n",
     "        yticklabels=AUTHORS,\n",
@@ -701,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -760,61 +705,14 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_coefs_list.mean().sort_values(ascending=False).head(20)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Average coef rank"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "word\n",
-       "here         1.5\n",
-       "a            3.1\n",
-       "in           3.7\n",
-       "and          3.9\n",
-       "an           5.1\n",
-       "of           6.7\n",
-       "to           8.3\n",
-       "is           8.4\n",
-       "as           8.4\n",
-       "which       12.2\n",
-       "this        15.7\n",
-       "that        16.8\n",
-       "their       17.4\n",
-       "the         17.6\n",
-       "may         19.4\n",
-       "when        19.7\n",
-       "despite     20.7\n",
-       "not         21.1\n",
-       "moreover    21.8\n",
-       "it          21.9\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_coefs_list.rank(axis=1, ascending=False).mean(axis=0).sort_values().head(20)"
+    "highest_coef_mc = df_coefs_list.mean().sort_values(ascending=False).head(20)\n",
+    "highest_coef_mc"
    ]
   },
   {
@@ -826,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,19 +743,20 @@
     "    \"themselves\",\n",
     "]\n",
     "\n",
+    "# Select the words with the highest coefficients in the multiclass classification\n",
     "high_coef_figname = \"figures/word_frequencies/high_coef_words_heatmap.png\"\n",
-    "high_coef_words = list(df_coefs_list.mean().sort_values(ascending=False).head(14).index)"
+    "highest_coef_mc_words = list(highest_coef_mc.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "word_list_tuples = [\n",
     "    (\"Pronouns\", pronouns, pronoun_figname),\n",
-    "    (\"High LR Coefficient Words\", high_coef_words, high_coef_figname),\n",
+    "    (\"High LR Coefficient Words\", highest_coef_mc_words, high_coef_figname),\n",
     "]\n",
     "\n",
     "for title, words, figname in word_list_tuples:\n",
@@ -876,6 +775,7 @@
     "\n",
     "    frequencies_df = pd.DataFrame(all_word_frequencies, index=words)\n",
     "    frequencies_df = frequencies_df.div(frequencies_df[\"human\"], axis=0)\n",
+    "    plt.figure(figsize=(6, 8))\n",
     "    sns.heatmap(\n",
     "        frequencies_df.drop(columns=\"human\"),\n",
     "        annot=True,\n",
@@ -889,6 +789,114 @@
     "    plt.ylabel(\"Word\")\n",
     "    plt.savefig(figname, bbox_inches=\"tight\")\n",
     "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dendrograms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "# 1. Binary classification\n",
+    "# By turning the binary classification results into a similarity matrix\n",
+    "np.fill_diagonal(bin_pivot.values, 1)\n",
+    "binary_distance = 1 - bin_pivot.fillna(bin_pivot.T)\n",
+    "\n",
+    "# 2. Multiclass classification\n",
+    "# By using the distribution of predictions in the multiclass LR as a feature vector for each author\n",
+    "multiclass_distance = 1 - cosine_similarity(multi_cm)\n",
+    "\n",
+    "# 3. Average feature vector\n",
+    "# By using the average feature vector from the z-score transformer for each author\n",
+    "z_scores_transformer = ZScoreTransformer(function_words)\n",
+    "z_scores = z_scores_transformer.fit_transform(df[\"text\"])\n",
+    "z_scores_distance = 1 - cosine_similarity(\n",
+    "    pd.DataFrame(z_scores, index=df[\"author\"])\n",
+    "    .groupby(\"author\")\n",
+    "    .mean()\n",
+    "    .reindex(AUTHORS)\n",
+    "    .values\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.cluster.hierarchy import dendrogram\n",
+    "\n",
+    "\n",
+    "# From https://scikit-learn.org/stable/auto_examples/cluster/plot_agglomerative_dendrogram.html#sphx-glr-auto-examples-cluster-plot-agglomerative-dendrogram-py\n",
+    "\n",
+    "\n",
+    "def plot_dendrogram(model, **kwargs):\n",
+    "    # Create linkage matrix and then plot the dendrogram\n",
+    "\n",
+    "    # create the counts of samples under each node\n",
+    "    counts = np.zeros(model.children_.shape[0])\n",
+    "    n_samples = len(model.labels_)\n",
+    "    for i, merge in enumerate(model.children_):\n",
+    "        current_count = 0\n",
+    "        for child_idx in merge:\n",
+    "            if child_idx < n_samples:\n",
+    "                current_count += 1  # leaf node\n",
+    "            else:\n",
+    "                current_count += counts[child_idx - n_samples]\n",
+    "        counts[i] = current_count\n",
+    "\n",
+    "    linkage_matrix = np.column_stack(\n",
+    "        [model.children_, model.distances_, counts]\n",
+    "    ).astype(float)\n",
+    "\n",
+    "    # Plot the corresponding dendrogram\n",
+    "    dendrogram(linkage_matrix, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "\n",
+    "distance_matrices = {\n",
+    "    \"Binary Classification\": binary_distance,\n",
+    "    \"Multiclass Classification\": multiclass_distance,\n",
+    "    \"Average Feature Vector\": z_scores_distance,\n",
+    "}\n",
+    "\n",
+    "for title, distance_matrix in distance_matrices.items():\n",
+    "    for linkage in [\"single\", \"average\", \"complete\"]:\n",
+    "        figname = f\"figures/dendrograms/{title.replace(' ', '-').lower()}_{linkage}.png\"\n",
+    "        if os.path.exists(figname):\n",
+    "            continue\n",
+    "\n",
+    "        agg = AgglomerativeClustering(\n",
+    "            n_clusters=1,\n",
+    "            metric=\"precomputed\",\n",
+    "            linkage=linkage,\n",
+    "            compute_distances=True,\n",
+    "        )\n",
+    "\n",
+    "        agg.fit(distance_matrix)\n",
+    "\n",
+    "        plt.title(\"Hierarchical Clustering Dendrogram\")\n",
+    "        plot_dendrogram(agg, labels=AUTHORS, leaf_font_size=10)\n",
+    "        plt.xticks(rotation=90)\n",
+    "        plt.savefig(figname, bbox_inches=\"tight\")\n",
+    "        plt.close()"
    ]
   }
  ],
