fix individual cms; most/least confused LLMs

--- a/final_analysis.ipynb
+++ b/final_analysis.ipynb
@@ -444,7 +444,7 @@
     "        }\n",
     "    )\n",
     "df_cms = pd.DataFrame(df_cms)\n",
-    "df_cms.groupby([\"author1\", \"author2\"]).mean().reset_index()\n",
+    "df_cms = df_cms.groupby([\"author1\", \"author2\"]).mean().reset_index()\n",
     "\n",
     "for _, (author1, author2, z_z, z_o, o_z, o_o) in df_cms.iterrows():\n",
     "    classification_figname = (\n",
@@ -469,12 +469,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Average word coefficients"
+    "### Humans and LLMs confused\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLMS experiments ranked by the frequency of confusing the LLM for the human:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "author2\n",
+       "claude-3-sonnet-20240229    0.25250\n",
+       "claude-3-opus-20240229      0.21050\n",
+       "gpt-3.5-turbo-0125          0.14800\n",
+       "gemini-1.0-pro              0.08400\n",
+       "gpt-4-turbo-2024-04-09      0.07775\n",
+       "gemini-1.5-pro-latest       0.05475\n",
+       "Name: one_zero, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "human_experiments = (\n",
+    "    df_cms[df_cms[\"author1\"] == HUMAN].drop(columns=\"author1\").groupby(\"author2\").mean()\n",
+    ")\n",
+    "\n",
+    "print(\"LLMS experiments ranked by the frequency of confusing the LLM for the human:\")\n",
+    "human_experiments[\"one_zero\"].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLMS experiments ranked by the frequency of confusing the human for the LLM:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "author2\n",
+       "claude-3-opus-20240229      0.09900\n",
+       "claude-3-sonnet-20240229    0.08775\n",
+       "gpt-4-turbo-2024-04-09      0.06875\n",
+       "gemini-1.5-pro-latest       0.06475\n",
+       "gpt-3.5-turbo-0125          0.03375\n",
+       "gemini-1.0-pro              0.01250\n",
+       "Name: zero_one, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"LLMS experiments ranked by the frequency of confusing the human for the LLM:\")\n",
+    "human_experiments[\"zero_one\"].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average word coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +618,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +786,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,17 +911,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.cluster.hierarchy import dendrogram\n",
     "\n",
     "\n",
-    "# From https://scikit-learn.org/stable/auto_examples/cluster/plot_agglomerative_dendrogram.html#sphx-glr-auto-examples-cluster-plot-agglomerative-dendrogram-py\n",
-    "\n",
-    "\n",
     "def plot_dendrogram(model, **kwargs):\n",
+    "    # From https://scikit-learn.org/stable/auto_examples/cluster/plot_agglomerative_dendrogram.html#sphx-glr-auto-examples-cluster-plot-agglomerative-dendrogram-py\n",
     "    # Create linkage matrix and then plot the dendrogram\n",
     "\n",
     "    # create the counts of samples under each node\n",
@@ -865,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,6 +976,22 @@
     "        plt.xticks(rotation=90)\n",
     "        plt.savefig(figname, bbox_inches=\"tight\")\n",
     "        plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### todo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_scores_df = pd.DataFrame(z_scores, index=df[\"author\"])"
    ]
   }
  ],
